WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165461
[CSS Parser] Reject invalid hex colors on the fast path
https://bugs.webkit.org/show_bug.cgi?id=165461
Summary
[CSS Parser] Reject invalid hex colors on the fast path
Dave Hyatt
Reported
2016-12-05 22:01:17 PST
[CSS Parser] Reject invalid hex colors on the fast path
Attachments
Patch
(1.52 KB, patch)
2016-12-05 22:02 PST
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-12-05 22:02:06 PST
Created
attachment 296270
[details]
Patch
alan
Comment 2
2016-12-05 22:02:56 PST
Comment on
attachment 296270
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=296270&action=review
> Source/WebCore/css/parser/CSSParserFastPaths.cpp:424 > + return Color(rgb);
tabs?
Dave Hyatt
Comment 3
2016-12-05 23:35:09 PST
Fixed in
r209389
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug