[CSS Parser] Reject invalid hex colors on the fast path https://bugs.webkit.org/show_bug.cgi?id=165461

Reviewed by Zalan Bujtas.

* css/parser/CSSParserFastPaths.cpp:
(WebCore::fastParseColorInternal):
Make sure to check for success. There was even a FIXME in the code about this!
Matches our old parser's behavior.



Canonical link: https://commits.webkit.org/183056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209389 268f45cc-cd09-0410-ab3c-d52691b4dbfc